samples/_failures_safe/1761300864_68f0be_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_67b1b2d3.c: In function ‘main’:
./samples/SAFE/__tmp_67b1b2d3.c:151:13: error: expected expression at end of input
  151 |             while (group_end < entry_count)
      |             ^~~~~
./samples/SAFE/__tmp_67b1b2d3.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_67b1b2d3.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_67b1b2d3.c:151:13: error: expected declaration or statement at end of input
